--- a/apps/Maurer_Rose_Interpolator/src/style.css
+++ b/apps/Maurer_Rose_Interpolator/src/style.css
@@ -28,3 +28,14 @@
 ::-webkit-scrollbar-thumb:hover {
     background-color: #6b7280;
 }
+
+/* Hide native spin buttons */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
